frontend: amend CSS to fix manage accounts UI on smaller screens

--- a/frontends/web/src/routes/settings/components/manage-accounts/watchonlySettings.module.css
+++ b/frontends/web/src/routes/settings/components/manage-accounts/watchonlySettings.module.css
@@ -7,6 +7,5 @@
   font-size: 14px;
   line-height: 1;
   margin-right: 8px;
-  padding-left: var(--space-quarter);
   vertical-align: sub;
 }
